This is my first commit

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- This comment is made by Shiva -->
+<!-- This comment is made by Santosh -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +12,7 @@
   <link rel="icon" href="assets/images/logo.png">
 </head>
 <body>
+  <!-- Learning github -->
   <!-- HERO CONTENT -->
   <div id="hero-content">
       <div id="nav">
